<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="instructionsViewModel"
            type="com.udacity.shoestore.screens.login.LoginViewModel" />
    </data>

    <!-- The reason to implement a linear layout here is because is the same screen as the welcome fragment,
    so it was basically reuse the implementation.
    The same explanation applies here too.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/instructions_first_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/instructions_first_message" />

        <TextView
            android:id="@+id/instructions_second_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/instructions_second_message" />

        <Button
            android:id="@+id/take_me_to_shop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/take_me_to_shop" />
    </LinearLayout>

</layout>
