<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.screens.welcome.WelcomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_first_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/welcome_first_message"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/welcome_second_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="112dp"
            android:layout_marginRight="10dp"
            android:text="@string/welcome_second_message" />

        <Button
            android:id="@+id/take_me_to_instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/take_me_to_instructions" />
    </LinearLayout>
</layout>
